--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,8 +22,8 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
 
-      - name: Install tox
-        run: pip install tox
+      - name: Install uv
+        uses: astral-sh/setup-uv@v7
 
       - name: Test
-        run: tox -e py
+        run: uv run pytest -v tests/
