--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,3 +26,13 @@ jobs:
 
       - name: Test
         run: uv run pytest -v tests/
+
+  check:
+    name: check all unit tests pass
+    runs-on: ubuntu-latest
+    needs: test
+    steps:
+      - name: Decide whether the needed jobs succeeded or failed
+        uses: re-actors/alls-green@release/v1
+        with:
+          jobs: ${{ toJSON(needs) }}
